# neural-network-training-with-games

./: .gitignore  Dockerfile  Makefile  README.md  pig-particulas
.github/workflows/: release.yml
AlgoritmoTecelao/: .gitignore  CMakeLists.txt  LEIA-ME .txt  Makefile  README.md  fontes  listaDePregos.txt  main  main.cpp  pig
CanhaoDeNewton/: .gitignore  CMakeLists.txt  Makefile  index.html  manifest.json  sw.js  web.js  web.wasm
CanhaoDeNewton/include/: CGerenciadorObjetos.h  CGerenciadorTimers.h  CJogo.h  CMapaCaracteres.h  CObjeto.h  CPoolNumeros.h  CTimer.h  Codigos.h  PIG.h  PIG_Desenhos.h  PIG_Extras.c  PIG_Extras.h  PIG_Fontes.h  PIG_Jogo.h  PIG_Sprites.h  PIG_Timers.h  Tipos_PIG.h
CanhaoDeNewton/src/: Projeto.cbp  Projeto.cscope_file_list  Projeto.depend  Projeto.layout  main.cpp
DeepCars/: .gitignore  Makefile  main.cpp
DeepCars/imagens/: carros.psd
DeepCars/redes/: 106.00 - [1,18,6,4]  1065.00 - [1,18,6,4]  109.00 - [1,18,6,4]  118.00 - [1,18,6,4]  1331.00 - [1,18,6,4]  1384.00 - [1,18,6,4]  1524.00 - [1,18,6,4]  153.00 - [1,18,6,4]  157.00 - [1,18,6,4]  1647.00 - [1,18,6,4]  167.00 - [1,18,6,4]  177.00 - [1,18,6,4]  179.00 - [1,18,6,4]  1817.00 - [1,18,6,4]  2190.00 - [1,18,6,4]  2196.00 - [1,18,6,4]  2387.00 - [1,18,6,4]  2390.00 - [1,18,6,4]  2581.00 - [1,18,6,4]  2594.00 - [1,18,6,4]  3131.00 - [1,18,6,4]  3591.00 - [1,18,6,4]  3628.00 - [1,18,6,4]  3744.00 - [1,18,6,4]  3878.00 - [1,18,6,4]  3895.00 - [1,18,6,4]  3912.00 - [1,18,6,4]  3936.00 - [1,18,6,4]  3995.00 - [1,18,6,4]  4000.00 - [1,18,6,4]  4009.00 - [1,18,6,4]  4018.00 - [1,18,6,4]  4026.00 - [1,18,6,4]  4083.00 - [1,18,6,4]  4092.00 - [1,18,6,4]  4101.00 - [1,18,6,4]  4120.00 - [1,18,6,4]  4121.00 - [1,18,6,4]  4124.00 - [1,18,6,4]  4126.00 - [1,18,6,4]  (+37 more)
Dinossauro-Google/: .gitignore  CMakeLists.txt  Desenhar.h  GeradorObstaculos.h  Makefile  Sprites.h  encoding.sh  gerador.cpp  main.cpp  obstaculos.txt  pig
FlappIA-Bird/: CMakeLists.txt  Desenhar.h  FuncoesAuxiliares.h  Makefile  Sprites.h  main  main.cpp
HardestGame/: Makefile  cmakes  main.cpp
HardestGameEditor/: Makefile  main.cpp
PIGv0.5.1/: AlgoritmoGenetico.h  Atualizar.h  Backpropagation.h  CGerenciadorObjetos.h  CJogo.h  CMapaCaracteres.h  CObjeto.h  CTimer.h  Colisao.h  Colisao2.h  Desenhar.h  FuncoesAuxiliares.h  GeradorObstaculos.h  Inicializar.h  InputsRedeNeural.h  ManipularEsferas.h  MouseETeclado.h  PIG.h  PIG_Fontes.h  PIG_Geometricos.h  PIG_Jogo.h  PIG_Objetos.h  PIG_Variaveis.h  Sprites.h  Tipos.h  Tipos_PIG.h  Variaveis.h  Victor.h
ParticulasGravitacionais3D/: CMakeLists.txt  Makefile  Tipos0.h  Variaveis0.h  fontes  main.cpp  pig
Spirograph/: Makefile  README.md  main.cpp
common/: pig
common/pig-0.5.1/: CJogo.h  (+18 more)
games/AlgoritmoTecelao/: CMakeLists.txt  Makefile  input.txt
games/AlgoritmoTecelao/src/: main.cpp
pig/: CJogo.h  CObjeto.h  PIG_Objetos.h  Tipos_PIG.h  Victor.h
pig-0.5.1/: CGerenciadorObjetos.h  CJogo.h  CObjeto.h  CPoolNumeros.h  ManipularEsferas.h  PIG.h  PIG_Geometricos.h  PIG_Jogo.h  PIG_Objetos.h  TexturasEAvisos.h  Tipos_PIG.h  Victor.h
(+75 files in other folders)
